--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #6b3e99; /* Cor de fundo roxa */
+            background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
         }
 
         .profiles-container {
