--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
         }
 
         .profile {
-            width: 150px;
+            width: 200px;
             height: 200px;
-            background-color: #8b5fa3; /* Cor de fundo roxa mais clara */
-            border-radius: 10px;
+            border-radius: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -36,8 +35,8 @@
         }
 
         .profile img {
-            width: 100px;
-            height: 100px;
+            width: 150px;
+            height: 150px;
             border-radius: 100%;
             object-fit: cover;
         }
