--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 <body>
     <div class="profiles-container">
         <a href="https://brauxx.github.io/aurora" class="profile">
-            <img src="https://placekitten.com/100/100" alt="Aurora">
+            <img src="/img/aurora.jpg" alt="Aurora">
             <span class="profile-name">Aurora</span>
         </a>
 
         <a href="https://brauxx.github.io/stella" class="profile">
-            <img src="https://placekitten.com/100/100" alt="Stella">
+            <img src="/img/stella.jpg" alt="Stella">
             <span class="profile-name">Stella</span>
         </a>
 
         <a href="https://brauxx.github.io/nyx" class="profile">
-            <img src="https://placekitten.com/100/100" alt="Nyx">
+            <img src="/img/nyx.jpg" alt="Nyx">
             <span class="profile-name">Nyx</span>
         </a>
     </div>
