--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
 <body>
     <div class="profiles-container">
-        <a href="https://brauxx.github.io/aurora" class="profile">
+        <a href="/aurora" class="profile">
             <img src="/img/aurora.jpg" alt="Aurora">
             <span class="profile-name">Aurora</span>
         </a>
 
-        <a href="https://brauxx.github.io/stella" class="profile">
+        <a href="/stella" class="profile">
             <img src="/img/stella.jpg" alt="Stella">
             <span class="profile-name">Stella</span>
         </a>
 
-        <a href="https://brauxx.github.io/nyx" class="profile">
+        <a href="/nyx" class="profile">
             <img src="/img/nyx.jpg" alt="Nyx">
             <span class="profile-name">Nyx</span>
         </a>
