--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
 <body>
     <div class="profiles-container">
         <a href="/aurora" class="profile">
-            <img src="/img/aurora.jpg" alt="Aurora">
+            <img src="./img/aurora.jpg" alt="Aurora">
             <span class="profile-name">Aurora</span>
         </a>
 
         <a href="/stella" class="profile">
-            <img src="/img/stella.jpg" alt="Stella">
+            <img src="./img/stella.jpg" alt="Stella">
             <span class="profile-name">Stella</span>
         </a>
 
         <a href="/nyx" class="profile">
-            <img src="/img/nyx.jpg" alt="Nyx">
+            <img src="./img/nyx.jpg" alt="Nyx">
             <span class="profile-name">Nyx</span>
         </a>
     </div>
