--- a/index.html
+++ b/index.html
@@ -78,6 +78,21 @@
             margin-right: 5px;
             fill: white;
         }
+
+        @media (max-width: 600px) {
+    .profiles-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 10px;
+    }
+
+    .profile {
+        width: 100%;
+        height: 100%;
+    }
+}
+
     </style>
 </head>
 
