--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
 </head>
 
 <body>
+    <div id="stars"></div>
+    <div id="stars2"></div>
+    <div id="stars3"></div>
     <a href="/" class="back-button">
         <img src="/images/back.svg" class="back-icon" alt="Voltar">
         Voltar
