--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="./css/styles.css">
     <title>Seleção de Perfil</title>
     <style>
-        body {
+        body div:not(.starish){
             margin: 0;
             padding: 0;
             display: flex;
@@ -97,9 +97,11 @@
 </head>
 
 <body>
-    <div id="stars"></div>
-    <div id="stars2"></div>
-    <div id="stars3"></div>
+    <div class="starish">
+        <div id="stars"></div>
+        <div id="stars2"></div>
+        <div id="stars3"></div>
+    </div>
     <a href="/" class="back-button">
         <img src="/images/back.svg" class="back-icon" alt="Voltar">
         Voltar
