--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="./css/styles.css">
     <title>Seleção de Perfil</title>
     <style>
-        body div:not(.starish){
+        .main-container{
             margin: 0;
             padding: 0;
             display: flex;
@@ -102,6 +102,7 @@
         <div id="stars2"></div>
         <div id="stars3"></div>
     </div>
+    <div class="main-container">
     <a href="/" class="back-button">
         <img src="/images/back.svg" class="back-icon" alt="Voltar">
         Voltar
@@ -122,6 +123,7 @@
             <img src="./img/nyx.jpg" alt="Nyx">
             <span class="profile-name">Nyx</span>
         </a>
+    </div>
     </div>
 </body>
 
