--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             fill: white;
         }
 
+    .starish {
+        position: absolute;
+        z-index: -1;
+    }
+
         @media (max-width: 600px) {
     .profiles-container {
         display: grid;
