--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             color: white;
         }
 
+        a {
+            text-decoration: none;
+        }
+
         h1 {
             font-size: 32px;
             margin-bottom: 30px;
