--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         }
 
         .profile img {
+            box-shadow: black 0px 0px 20px;
             width: 150px;
             height: 150px;
             border-radius: 100%;
