--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@ permalink: /404.html
       height: 100%;
       margin: 0;
       font-family: 'Arial', sans-serif;
-      background-color: #121212;
+      background-color: #0d1017;
       color: #fff;
       display: flex;
       justify-content: center;
