--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>404 Não Encontrado</title>
 <style>
-        body, html {
+    body, html {
       height: 100%;
       margin: 0;
       font-family: 'Arial', sans-serif;
@@ -30,13 +30,13 @@ permalink: /404.html
     }
     
     p {
-      font-size: 1.5em;
+      font-size: 1.2em;
     }
     
     #go-back {
       margin-top: 20px;
       padding: 10px 20px;
-      font-size: 1em;
+      font-size: 1.2em;
       background-color: #bb86fc;
       color: #121212;
       border: none;
@@ -48,6 +48,15 @@ permalink: /404.html
     #go-back:hover {
       background-color: #9a67ea;
     }
+
+    /* CSS media query dentro de um stylesheet */
+    @media (max-width: 768px) {
+        #goback {
+            padding: 20px 30px;
+            font-size: 1.2em;
+        }
+    }
+
 </style>
 </head>
 <body>
