--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <video autoplay muted loop id="myVideo">
-      <source src="media/background.mp4" type="video/mp4">
+      <source src="https://i.imgur.com/ruVYoIz.mp4" type="video/mp4">
     </video>
     <div class="main-container">
     <a href="/" class="back-button">
