--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 </head>
 
 <body>
-    <video autoplay muted loop id="myVideo">
-      <source src="https://i.imgur.com/jRTdyrm.jpg" type="video/mp4">
-    </video>
+    <img src="https://i.imgur.com/jRTdyrm.jpg" id="backgroundImage">
     <div class="main-container">
     <a href="/" class="back-button">
         <img src="/images/back.svg" class="back-icon" alt="Voltar">
