--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <img src="https://i.imgur.com/jRTdyrm.jpg" id="backgroundImage">
+    <img src=https://i.imgur.com/M5iNocO.jpg" id="backgroundImage">
     <div class="main-container">
     <a href="/" class="back-button">
         <img src="/images/back.svg" class="back-icon" alt="Voltar">
