--- a/index.html
+++ b/index.html
@@ -8,12 +8,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/navbar-styles.css">
     <link rel="icon" type="image/svg+xml" href="/images/face.svg">
     
     <title>Seleção de Perfil</title>
 </head>
 
 <body>
+    <div class="header">
+      <div class="navbar" id="navbar">
+        <a href="#"><img src="/images/logo-white.svg" alt="Logo" class="navbar-logo"></a>
+        <ul class="navbar-menu">
+          <li><a href="/prompt-builder" id="navbar-link">Prompt Builder</a></li>
+          <li><a href="#arts" id="navbar-link">Arts</a></li>
+          <li class='navbar-about'><a href="#about" id="navbar-link">Sobre</a></li>
+        </ul>
+      </div>
+    </div>
+
+    
     <div class="main-container">
     <a href="/" class="back-button">
         <img src="/images/back.svg" class="back-icon" alt="Voltar">
