--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="/css/navbar-styles.css">
+    <link rel="stylesheet" href="/css/footer-styles.css">
     <link rel="icon" type="image/svg+xml" href="/images/face.svg">
     
     <title>Seleção de Perfil</title>
@@ -50,6 +51,42 @@
         </a>
     </div>
     </div>
+
+        <footer>
+
+      <div class="footer-container">
+
+        <address class="contact">
+          <h3>Contato</h3>
+
+          <a href="mailto:rafaelbraun5@hotmail.com" class="contact-button">
+            <i class="fa-solid fa-envelope"></i> Email
+          </a>
+
+          <div class="social-icons">
+            <a href="https://github.com/Stoltz-dev">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://twitter.com/rafaaa2105">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="https://instagram.com/rafaaa2105/">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </div>
+
+        </address>
+
+        <img src="/images/zero-studios-white.svg" class="zero-studios-logo">
+
+      </div>
+
+      <div class="copyright">
+        &copy; 2023 Stoltz (ZeRO Studios)<br />
+        Todos os direitos reservados.
+      </div>
+
+    </footer>
 </body>
 
 </html>
