--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
 
     
     <div class="main-container">
-    <a href="/" class="back-button">
-        <img src="/images/back.svg" class="back-icon" alt="Voltar">
-        Voltar
-    </a>
     <h1>Escolha um Perfil</h1>
     <div class="profiles-container">
         <a href="/aurora" class="profile">
@@ -89,4 +85,6 @@
     </footer>
 </body>
 
+    <script src="js/navbar-script.js"></script>
+    
 </html>
