--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="/css/navbar-styles.css">
     <link rel="stylesheet" href="/css/footer-styles.css">
+    <link rel="stylesheet" href="css/scrollbar.css">
     <link rel="icon" type="image/svg+xml" href="/images/face.svg">
     
     <title>Seleção de Perfil</title>
