--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="footer-container">
 
-        <address class="contact">
+        <div class="contact">
           <h3>Contato</h3>
 
           <a href="mailto:rafaelbraun5@hotmail.com" class="contact-button">
@@ -72,7 +72,7 @@
             </a>
           </div>
 
-        </address>
+        </div>
 
         <img src="/images/zero-studios-white.svg" class="zero-studios-logo">
 
