--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 </head>
 
 <body>
+  <div class="container">
     <div class="header">
       <div class="navbar" id="navbar">
-        <a href="#"><img src="/images/logo-white.svg" alt="Logo" class="navbar-logo"></a>
+        <a href="/"><img src="/images/logo-white.svg" alt="Logo" class="navbar-logo"></a>
         <ul class="navbar-menu">
-          <li><a href="/prompt-builder" id="navbar-link">Prompt Builder</a></li>
+          <li><a href="/" id="navbar-link">Home</a></li>
           <li><a href="#arts" id="navbar-link">Arts</a></li>
           <li class='navbar-about'><a href="#about" id="navbar-link">Sobre</a></li>
         </ul>
