--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="header">
+    <header class="header">
       <div class="navbar" id="navbar">
         <a href="/"><img src="/images/logo-white.svg" alt="Logo" class="navbar-logo"></a>
         <ul class="navbar-menu">
@@ -27,7 +26,7 @@
           <li class='navbar-about'><a href="#about" id="navbar-link">Sobre</a></li>
         </ul>
       </div>
-    </div>
+    </header>
 
     
     <div class="main-container">
