--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
     </footer>
 </body>
 
-    <script src="js/navbar-script.js"></script>
+    <script src="/js/navbar-script.js"></script>
     
 </html>
