--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="/"><img src="/images/logo-white.svg" alt="Logo" class="navbar-logo"></a>
         <ul class="navbar-menu">
           <li><a href="/" id="navbar-link">Home</a></li>
-          <li><a href="#arts" id="navbar-link">Arts</a></li>
+          <li><a href="/prompt-builder" id="navbar-link">Prompt Builder</a></li>
           <li class='navbar-about'><a href="#about" id="navbar-link">Sobre</a></li>
         </ul>
       </div>
