--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
 </body>
 
     <script src="/js/navbar-script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     
 </html>
