--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/css/footer-styles.css">
     <link rel="stylesheet" href="/css/scrollbar.css">
     <link rel="icon" type="image/svg+xml" href="/images/face.svg">
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     
     <title>Seleção de Perfil</title>
 </head>
