--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
             <span class="profile-name">Aurora</span>
         </a>
 
+        <a href="/STEM" class="profile">
+            <img src="./media/stem.jpg" alt="STEM">
+            <span class="profile-name">STEM</span>
+        </a>
+
         <a href="/stella" class="profile">
             <img src="./media/stella.jpg" alt="Stella">
             <span class="profile-name">Stella</span>
