--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     <div class="main-container">
     <h1>Escolha um Perfil</h1>
     <div class="profiles-container">
-        <a href="/aurora" class="profile">
+        <!-- <a href="/aurora" class="profile">
             <img src="./media/aurora.jpg" alt="Aurora">
             <span class="profile-name">Aurora</span>
-        </a>
+        </a>-->
 
         <a href="/STEM" class="profile">
             <img src="./media/stem.jpg" alt="STEM">
@@ -53,10 +53,10 @@
             <span class="profile-name">Stella</span>
         </a>
 
-        <a href="/nyx" class="profile">
+        <!--<a href="/nyx" class="profile">
             <img src="./media/nyx.jpg" alt="Nyx">
             <span class="profile-name">Nyx</span>
-        </a>
+        </a>-->
     </div>
     </div>
 
