--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>-->
 
         <a href="/STEM" class="profile">
-            <img src="./media/stem.jpg" alt="STEM">
+            <img src="./media/core.png" alt="STEM">
             <span class="profile-name">STEM</span>
         </a>
 
