--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <span class="profile-name">Aurora</span>
         </a>-->
 
-        <a href="/STEM" class="profile">
-            <img src="./media/core.png" alt="STEM">
-            <span class="profile-name">STEM</span>
+        <a href="/Oracle" class="profile">
+            <img src="./media/core.png" alt="Oracle">
+            <span class="profile-name">Oracle</span>
         </a>
 
         <a href="/stella" class="profile">
