--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </a>-->
 
         <a href="/Oracle" class="profile">
-            <img src="./media/core.png" alt="Oracle">
+            <img src="./media/oracle.png" alt="Oracle">
             <span class="profile-name">Oracle</span>
         </a>
 
