--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="profile-name">Aurora</span>
         </a>-->
 
-        <a href="/Oracle" class="profile">
+        <a href="/oracle" class="profile">
             <img src="./media/oracle.png" alt="Oracle">
             <span class="profile-name">Oracle</span>
         </a>
