--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </a>
 
           <div class="social-icons">
-            <a href="https://github.com/Stoltz-dev">
+            <a href="https://github.com/polarfreez">
               <i class="fa-brands fa-github"></i>
             </a>
             <a href="https://twitter.com/rafaaa2105">
@@ -90,7 +90,7 @@
       </div>
 
       <div class="copyright">
-        &copy; 2023 Stoltz (ZeRO Studios)<br />
+        &copy; 2023 polar (ZeRO Studios)<br />
         Todos os direitos reservados.
       </div>
 
