--- a/index.html
+++ b/index.html
@@ -85,12 +85,10 @@
 
         </div>
 
-        <img src="/images/zero-studios-white.svg" class="zero-studios-logo">
-
       </div>
 
       <div class="copyright">
-        &copy; 2023 polar (ZeRO Studios)<br />
+        &copy; 2023 polar<br />
         Todos os direitos reservados.
       </div>
 
