--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
     </div>
     </div>
 
-        <footer>
+    <footer>
 
       <div class="footer-container">
 
-        <div class="contact">
+        <address class="contact">
           <h3>Contato</h3>
 
-          <a href="mailto:rafaelbraun5@hotmail.com" class="contact-button">
+          <a href="mailto:profissional.braun@outlook.com" class="contact-button">
             <i class="fa-solid fa-envelope"></i> Email
           </a>
 
@@ -83,12 +83,12 @@
             </a>
           </div>
 
-        </div>
+        </address>
 
       </div>
 
       <div class="copyright">
-        &copy; 2023 polar<br />
+        &copy; 2023 Polar<br />
         Todos os direitos reservados.
       </div>
 
